Update and rename gem to config

--- a/exception/config
+++ b/exception/config
@@ -1,5 +1,6 @@
 gem 'exception_notification'
 
+env/staging.rb
   developers_list = %w(bugs@abc.com)
   config.middleware.use ExceptionNotification::Rack,
                         email: {
